Улучшения ботам